--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="main.css">
 </head>
 <body>
-<section class="section-main">
+<section class="section-main" >
         <nav>
             <video controls autoplay muted loop width="100%" height="100px">
                 <source src="/images/stock-video.mp4" type="video/mp4">
@@ -18,7 +18,7 @@
             <h2 class="blink_me">Daily stonks</h2>
            </div>
         </nav>
-            <main class="main-content">
+            <main class="main-content" >
         
                 <div class="search-box">
                     <label for="name">Search for company by ticker name</label>
@@ -39,12 +39,13 @@
             <section class="news-section">
                 <div class="news">
                     <h4>Get the latest new , pick a topic: </h4>
-                    <ol>
-                        <li class="li-news" onclick="getNews()">technology</li>
-                        <li class="li-news" onclick="getNews()">ipo</li>
-                        <li class="li-news" onclick="getNews()">blockchain</li>
-                        <li class="li-news" onclick="getNews()">finance</li>
-                    </ol>
+                    <form class="news-form">
+                        <select class="news-pick" name="news">
+                          <option value="technology">Technology</option>
+                          <option value="blockchain">Blockchain</option>
+                          <option value="finance">Finance</option>
+                        </select>
+                      </form>
                 </div>
             </section>
            <footer>
