Fix styling and add div for news

--- a/index.html
+++ b/index.html
@@ -47,6 +47,10 @@
                         </select>
                       </form>
                 </div>
+
+                <div class="user-news">
+                    
+                </div>
             </section>
            <footer>
          <h4>made by Olof Hag</h4>
