fix bug and fix styling for phone

--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
                     <h4>Get the latest new , pick a topic: </h4>
                     <form class="news-form">
                         <select class="news-pick" name="news">
+                          <option value="" disabled selected>Choose one...</option>
                           <option value="technology">Technology</option>
                           <option value="blockchain">Blockchain</option>
                           <option value="finance">Finance</option>
@@ -52,6 +53,11 @@
 
                 </div>
             </section>
+            <!-- Back to top button -->
+            <div class="back-to-top">
+                <a class="top" href="#">Back to Top </a>
+            </div>
+          
            <footer>
          <h4>made by Olof Hag</h4>
            </footer>
