Add failsafe for searches

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <div class="search-box">
                     <label for="name">Search for company by ticker name</label>
                      <input type="text" id="name" name="name">
-                    <button class="button-31" role="button">Search</button>
+                    <button class="button-search" role="button">Search</button>
         
                 </div>
         
