Added styling , and remove personal api:key

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             </div>
           
            <footer>
-         <h4>made by Olof Hag</h4>
+         <h6>Made by Olof Hag</h6>
            </footer>
             
 </section>
